--- a/templates/component.html
+++ b/templates/component.html
@@ -9,6 +9,10 @@
             This person is a minor
         </warning>
 
+        <div s-if="isset('test')">
+            Test
+        </div>
+
         <ul>
             <li s-for="person.hobbies as hobby">{{hobby}}</li>
         </ul>
