--- a/templates/warning.html
+++ b/templates/warning.html
@@ -1,6 +1,6 @@
 <template>
     <div class="warning {{props.type}}">
-        {{children}}
+        {{ props.type }}: {{children}}
     </div>
 </template>
 
