--- a/templates/component.html
+++ b/templates/component.html
@@ -27,6 +27,9 @@
         <div>
             Mixed text {{person.name}} <b>and nodes</b>
         </div>
+
+        <footer data-bold="test text"></footer>
+
     </div>
 </template>
 
