Add support for dynamic Stamper props

--- a/templates/component.html
+++ b/templates/component.html
@@ -28,6 +28,8 @@
             Mixed text {{person.name}} <b>and nodes</b>
         </div>
 
+        <obj data-s-object="object"></obj>
+
         <footer data-bold="test text"></footer>
 
     </div>
