Initial support for s-for expression on components

--- a/templates/component.html
+++ b/templates/component.html
@@ -28,6 +28,8 @@
             Mixed text {{person.name}} <b>and nodes</b>
         </div>
 
+        <warning s-for="person.hobbies as hobby" data-type="warn">{{hobby}}</warning>
+
         <obj data-s-object="object"></obj>
 
         <footer data-bold="test text"></footer>
