--- a/templates/component.html
+++ b/templates/component.html
@@ -37,3 +37,10 @@
     </div>
 </template>
 
+<config>
+    [
+        "globals" => [
+            "title" => "Example Page"
+        ]
+    ]
+</config>
