Add workaround for boolean attributes

--- a/templates/component.html
+++ b/templates/component.html
@@ -32,6 +32,9 @@
 
         <obj data-s-object="object"></obj>
 
+        <input type="checkbox" disabled>
+        <input type="checkbox" disabled="false">
+
         <footer data-bold="test text"></footer>
 
     </div>
