Interpolate boolean attrs correctly

--- a/templates/component.html
+++ b/templates/component.html
@@ -35,6 +35,8 @@
         <input type="checkbox" disabled>
         <input type="checkbox" disabled="false">
 
+        <radiobox data-s-disabled="false" data-s-checked="false"></radiobox>
+
         <footer data-bold="test text"></footer>
 
     </div>
